refactor: add logic

--- a/index.html
+++ b/index.html
@@ -1,11 +1,122 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio Victor Hugo Mota</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Victor Hugo | Developer</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    
+  <header class="navbar">
+    <h1 class="logo">Victor<span>Dev</span></h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="inicio" class="inicio">
+    <h2>Olá, eu sou <span>Victor Hugo</span></h2>
+    <p>Desenvolvedor focado em criar soluções eficientes e modernas.</p>
+
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/victorhugosaavedramota/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/VictorHugoSMota" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="mailto:victorhugo.smota@gmail.com"><i class="fas fa-envelope"></i></a>
+    </div>
+
+    <a href="#projetos" class="btn">Ver Projetos</a>
+  </section>
+
+  <section id="sobre" class="sobre">
+    <h2>Sobre mim</h2>
+    <p>Sou um developer apaixonado por tecnologia e inovação. Tenho experiência com vendas e gestão, o que me ajuda a unir visão de negócio e técnica. Atualmente curso Sistemas de Informação na UNIDES e busco crescer na área de TI, com foco em desenvolvimento e segurança.</p>
+  </section>
+
+  <section id="habilidades" class="habilidades">
+    <h2>Habilidades</h2>
+    <div class="skills">
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">Java</div>
+      <div class="skill">Spring Boot</div>
+      <div class="skill">Git/GitHub</div>
+    </div>
+  </section>
+
+  <section id="projetos" class="projetos">
+    <h2>Projetos</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Projeto 1</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 2</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 3</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 4</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 5</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 6</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 7</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 8</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 9</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+      <div class="card">
+        <h3>Projeto 10</h3>
+        <p>Breve descrição do projeto...</p>
+        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+      </div>
+    </div>
+  </section>
+
+  <footer id="contato" class="contato">
+    <h2>Contato</h2>
+    <div class="links">
+      <a href="mailto:victorhugo.smota@gmail.com">E-mail</a>
+      <a href="https://github.com/VictorHugoSMota" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/victorhugosaavedramota/" target="_blank">LinkedIn</a>
+    </div>
+    <p>© 2025 Victor Hugo. Todos os direitos reservados.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
