--- a/index.html
+++ b/index.html
@@ -35,19 +35,40 @@
   </section>
 
   <section id="sobre" class="sobre">
-    <h2>Sobre mim</h2>
-    <p>Sou um developer apaixonado por tecnologia e inovação. Tenho experiência com vendas e gestão, o que me ajuda a unir visão de negócio e técnica. Atualmente curso Sistemas de Informação na UNIDES e busco crescer na área de TI, com foco em desenvolvimento e segurança.</p>
+    <div class="container">
+      <h2>Sobre mim</h2>
+      <p>Sou um developer apaixonado por tecnologia e inovação. Tenho experiência com vendas e gestão, o que me ajuda a unir visão de negócio e técnica. Atualmente curso <strong>Sistemas de Informação</strong> na <strong>UNIDES</strong> e busco crescer na área de TI, com foco em <strong>desenvolvimento</strong> e <strong>cibersegurança</strong>.</p>
+      <p>Além da programação, gosto de aprender novas tecnologias e desenvolver projetos pessoais que desafiem minha lógica e criatividade.</p>
+    </div>
   </section>
 
   <section id="habilidades" class="habilidades">
     <h2>Habilidades</h2>
     <div class="skills">
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">Java</div>
-      <div class="skill">Spring Boot</div>
-      <div class="skill">Git/GitHub</div>
+      <div class="skill">
+        <i class="fab fa-html5"></i>
+        <p>HTML</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-css3-alt"></i>
+        <p>CSS</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-js"></i>
+        <p>JavaScript</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-java"></i>
+        <p>Java</p>
+      </div>
+      <div class="skill">
+        <i class="fas fa-leaf"></i>
+        <p>Spring Boot</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-github"></i>
+        <p>Git/GitHub</p>
+      </div>
     </div>
   </section>
 
@@ -55,54 +76,32 @@
     <h2>Projetos</h2>
     <div class="cards">
       <div class="card">
-        <h3>Projeto 1</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+        <img src="imagens/Captura de tela 2025-05-30 120510.png" alt="TransUni">
+        <h3>TransUni</h3>
+        <p>Plataforma de caronas universitárias desenvolvida com HTML, CSS e JavaScript.</p>
+        <div class="buttons">
+          <a href="https://projeto-trans-uni.vercel.app/" target="_blank" class="btn">Ver Site</a>
+          <a href="https://github.com/VictorHugoSMota/Projeto-TransUni" target="_blank" class="btn-outline">Ver Código</a>
+        </div>
       </div>
+
       <div class="card">
-        <h3>Projeto 2</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+        <img src="imagens/Captura de tela 2025-10-27 120020.png" alt="Hotel JK">
+        <h3>Hotel JK</h3>
+        <p>Projeto acadêmico de sistema de reservas desenvolvido em HTML e CSS.</p>
+        <div class="buttons">
+          <a href="https://projeto-hotel-jk.vercel.app/" class="btn">Ver Site</a>
+          <a href="https://github.com/VictorHugoSMota/Projeto-Hotel-JK" class="btn-outline">Ver Código</a>
+        </div>
       </div>
+
       <div class="card">
-        <h3>Projeto 3</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 4</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 5</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 6</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 7</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 8</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 9</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
-      </div>
-      <div class="card">
-        <h3>Projeto 10</h3>
-        <p>Breve descrição do projeto...</p>
-        <a href="#" target="_blank" class="btn">Ver Projeto</a>
+        <img src="https://via.placeholder.com/400x200" alt="ScreenMatch">
+        <h3>ScreenMatch</h3>
+        <p>Aplicação para catalogar e avaliar filmes, criada com Java e Spring Boot.</p>
+        <div class="buttons">
+          <a href="https://github.com/VictorHugoSMota/ScreenMatch" class="btn-outline">Ver Código</a>
+        </div>
       </div>
     </div>
   </section>
