refactor: add skills

--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
     </div>
 
     <a href="#projetos" class="btn">Ver Projetos</a>
+    <a href="https://github.com/VictorHugoSMota/Curriculo-Victor-Hugo-Mota" 
+    target="_blank" 
+    class="btn-outline">Baixar Currículo</a>
   </section>
 
   <section id="sobre" class="sobre">
     <div class="container">
       <h2>Sobre mim</h2>
-      <p>Sou um developer apaixonado por tecnologia e inovação. Tenho experiência com vendas e gestão, o que me ajuda a unir visão de negócio e técnica. Atualmente curso <strong>Sistemas de Informação</strong> na <strong>UNIDES</strong> e busco crescer na área de TI, com foco em <strong>desenvolvimento</strong> e <strong>cibersegurança</strong>.</p>
-      <p>Além da programação, gosto de aprender novas tecnologias e desenvolver projetos pessoais que desafiem minha lógica e criatividade.</p>
+      <p>Tenho 20 anos e estou cursando <strong>Sistema de Informação</strong> na UNIDES. Já desenvolvo há algum tempo com <strong>HTML, CSS e JavaScript</strong>, atuando tanto no <strong>front-end</strong> quanto no <strong>back-end</strong>, o que me permite entregar soluções completas e integradas. Recentemente, comecei a me dedicar ao desenvolvimento <strong>mobile com Flutter</strong> — um campo que me fascina e no qual vejo grande potencial para unir performance, design e usabilidade.</p>
+      <p>Sou motivado por desafios que exigem criatividade e raciocínio, sempre buscando aprender algo novo — seja um framework, uma arquitetura ou uma integração entre plataformas. Meu objetivo é crescer como desenvolvedor, colaborar em projetos que façam a diferença e entregar resultados que tragam valor real. Se você procura alguém que encara ideias como código e problemas como oportunidades, vamos conversar.</p>
     </div>
   </section>
 
   <section id="habilidades" class="habilidades">
     <h2>Habilidades</h2>
+
+    <h3 class="subtitulo">Linguagens</h3>
     <div class="skills">
       <div class="skill">
         <i class="fab fa-html5"></i>
@@ -58,6 +63,10 @@
         <p>JavaScript</p>
       </div>
       <div class="skill">
+        <i class="fab fa-react"></i>
+        <p>React</p>
+      </div>
+      <div class="skill">
         <i class="fab fa-java"></i>
         <p>Java</p>
       </div>
@@ -66,11 +75,37 @@
         <p>Spring Boot</p>
       </div>
       <div class="skill">
+        <i class="fas fa-database"></i>
+        <p>SQL</p>
+      </div>
+    </div>
+
+
+    <h3 class="subtitulo">Tecnologias</h3>
+    <div class="skills">
+      <div class="skill">
+        <i class="fas fa-code"></i>
+        <p>VS Code</p>
+      </div>
+      <div class="skill">
+        <i class="fas fa-laptop-code"></i>
+        <p>IntelliJ</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-git-alt"></i>
+        <p>Git</p>
+      </div>
+      <div class="skill">
         <i class="fab fa-github"></i>
-        <p>Git/GitHub</p>
+        <p>GitHub</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-figma"></i>
+        <p>Figma</p>
       </div>
     </div>
   </section>
+
 
   <section id="projetos" class="projetos">
     <h2>Projetos</h2>
@@ -96,6 +131,26 @@
       </div>
 
       <div class="card">
+        <img src="imagens/Captura de tela 2025-10-27 180347.png" alt="Angels Hosters">
+        <h3>Angels Hosters</h3>
+        <p>Projeto acadêmico de sistema de reservas desenvolvido em HTML e CSS.</p>
+        <div class="buttons">
+          <a href="https://projeto-angels-hosters.vercel.app/" class="btn">Ver Site</a>
+          <a href="https://github.com/VictorHugoSMota/Projeto-Angels-Hosters" class="btn-outline">Ver Código</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="imagens/Captura de tela 2025-10-29 162347.png" alt="Amigo Secreto">
+        <h3>Amigo Secreto</h3>
+        <p>Projeto acadêmico de sistema de reservas desenvolvido em HTML e CSS.</p>
+        <div class="buttons">
+          <a href="https://projeto-amigo-secreto-psi.vercel.app/" class="btn">Ver Site</a>
+          <a href="https://github.com/VictorHugoSMota/challenge-amigo-secreto_pt" class="btn-outline">Ver Código</a>
+        </div>
+      </div>
+
+      <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="ScreenMatch">
         <h3>ScreenMatch</h3>
         <p>Aplicação para catalogar e avaliar filmes, criada com Java e Spring Boot.</p>
@@ -103,8 +158,19 @@
           <a href="https://github.com/VictorHugoSMota/ScreenMatch" class="btn-outline">Ver Código</a>
         </div>
       </div>
+
+      <div class="card">
+        <img src="imagens/Captura de tela 2025-10-29 162650.png" alt="Moda Ora">
+        <h3>Moda Ora</h3>
+        <p>Projeto acadêmico de sistema de reservas desenvolvido em HTML e CSS.</p>
+        <div class="buttons">
+          <a href="https://projeto-moda-ora.vercel.app/" class="btn">Ver Site</a>
+          <a href="https://github.com/VictorHugoSMota/Projeto-Moda-Ora" class="btn-outline">Ver Código</a>
+        </div>
+      </div>
     </div>
   </section>
+  
 
   <footer id="contato" class="contato">
     <h2>Contato</h2>
