--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>Desenvolvedor focado em criar soluções eficientes e modernas.</p>
 
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/victorhugosaavedramota/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/victorhugosaavedramota/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/VictorHugoSMota" target="_blank"><i class="fab fa-github"></i></a>
       <a href="mailto:victorhugo.smota@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
@@ -40,8 +40,8 @@
   <section id="sobre" class="sobre">
     <div class="container">
       <h2>Sobre mim</h2>
-      <p>Tenho 20 anos e estou cursando <strong>Sistema de Informação</strong> na UNIDES. Já desenvolvo há algum tempo com <strong>HTML, CSS e JavaScript</strong>, atuando tanto no <strong>front-end</strong> quanto no <strong>back-end</strong>, o que me permite entregar soluções completas e integradas. Recentemente, comecei a me dedicar ao desenvolvimento <strong>mobile com Flutter</strong> — um campo que me fascina e no qual vejo grande potencial para unir performance, design e usabilidade.</p>
-      <p>Sou motivado por desafios que exigem criatividade e raciocínio, sempre buscando aprender algo novo — seja um framework, uma arquitetura ou uma integração entre plataformas. Meu objetivo é crescer como desenvolvedor, colaborar em projetos que façam a diferença e entregar resultados que tragam valor real. Se você procura alguém que encara ideias como código e problemas como oportunidades, vamos conversar.</p>
+      <p>Tenho 20 anos e curso <strong>Sistema de Informação</strong>. Trabalho com <strong>HTML, CSS e JavaScript</strong>, desenvolvendo interfaces modernas e responsivas no front-end. No <strong>Back-end</strong>, venho estudando <strong>Node.js</strong> e aplicando <strong>Java</strong> em projetos que me ajudam a entender a estrutura e integração entre diferentes partes de uma aplicação, o que me dá uma visão completa do desenvolvimento.</p>
+      <p>Meu objetivo é me tornar um <strong>Desenvolvedor Full Stack</strong>, capaz de construir soluções completas, eficientes e escaláveis. Gosto de desafios que exigem lógica e criatividade, e estou sempre buscando aprender novas tecnologias, boas práticas e maneiras de transformar ideias em produtos reais e funcionais!</p>
     </div>
   </section>
 
